--- a/tbip-0075.mediawiki
+++ b/tbip-0075.mediawiki
@@ -34,7 +34,9 @@ A non-matching hash must be handled identically to a missing "h" parameter, in o
 
 An extensible "rN parameter" is added to allow for multiple transport mechanisms to be defined for the payment protocol. The "N" stands for an integer r parameter number. The original "r parameter" defined in BIP72 is thought of to be "r parameter" number 0, just with the 0 omitted. Additional "r parameters" above the number 0 are defined as &r1=, &r2=, &r3=, ... , &rN=. Lower numbered "r parameters" are to be interpreted as lower priority options by wallets and are provided for backwards compatibility or if a particular transport mechanism is unavailable. A wallet application may give the user an option to manually disabled a certain transport mechanism, which may cause the wallet to fallback to a lower priority transport mechanism. Any "r parameter" number may be used for any transport mechanism, however, use of the original "r parameter" (or "r parameter" number 0, or &r=) for HTTP and HTTPS connections is encouraged for backwards compatibility.
 
-Communication over all transport mechanisms defined by "r parameters" should result in the same data exchange (byte equivalent), therefore the "h" parameter should be valid regardless of the transport mechanism used. In order for this to be possible, in the payment request the payment_url field in the PaymentDetails portion of the PaymentRequest must also be expanded to allow for additional URLs. The same scheme is used for numbering the "r parameters" and the payment_url fields take on the form payment_urlN, where the "N" stands for an integer payment_url number. The original payment_url is thought to be payment_url number 0, just with the 0 omitted. Additional payment_url above the number 0 are defined as payment_url1, payment_url2, payment_url3, ... , payment_urlN. The same number of "r parameters" as payment_url should be supplied in both the bitcoin: URI as well as the payment request and each transport mechanism should use same parameter number for both the "r parameter" and payment_url. The wallet is encouraged to use the same numbered payment_url as "r parameter" (the same transport mechanism) for submitting the payment back to the payee, however, it can use a different transport mechanism if desired (maybe the originally used transport mechanism is no longer available).
+Communication over all transport mechanisms defined by "r parameters" should result in the same data exchange (byte equivalent), therefore the "h" parameter should be valid regardless of the transport mechanism used. In order for this to be possible, in the payment request the payment_url field in the PaymentDetails portion of the PaymentRequest must also be expanded to allow for additional URLs. The payment_url field is to be changed from an optional field to a repeated field.
+
+Note that "optional is compatible with repeated. Given serialized data of a repeated field as input, clients that expect this field to be optional will take the last input value if it's a primitive type field or merge all input elements if it's a message type field." ([[https://developers.google.com/protocol-buffers/docs/proto#updating|Updating A Message Type, Language Guide, Protocol Buffers, Google Developers]]) Because of this, in order to maintain backwards compatibility, the HTTP or HTTPS url are recommended to be placed as the last item in the repeated field. In order to keep some consistency, it is recommended that the payment_url values be placed in the reverse order as the "r parameters", although this order is not a requirement. The same number of "r parameters" as payment_url should be supplied in both the bitcoin: URI as well as the payment request. The wallet should be intelligent enough to locate the value with the transport mechanism it desires to use. It is recommended that the wallet uses the same transport mechanism for the fetching the payment request as submitting a payment to the payee, however, the wallet can choose to use a different transport mechanism if there is a reason to do so (such as a speed or availability issue detected with the transport mechanism that was originally used to fetch the payment request).
 
 
 ===Bluetooth URI Parameter and Format===
